--- a/index.html
+++ b/index.html
@@ -531,14 +531,24 @@
     <!-- secondparallex description ends -->
 
     <!-- our brands start -->
-    <div class="container  p-5">
+    <div class="container p-5">
       <h3 class="text-center fw-bold">Our Brands / Partners</h3>
-     <div class="d-flex justify-content-center mt-5 gap-5"> 
-      <img class="ibrands" src="image/kalpadeep.jpg" alt="">
-      <img class="ibrands" src="image/sikkimtrip.jpg" alt="">
-      <img class="ibrands" src="image/vovotrip.jpg" alt="">
-      <img  class="ibrands" src="image/bhutan-packages.jpg" alt=""></div>
-    </div>
+      <div class="row justify-content-center mt-5">
+          <div class="col-md-3">
+              <img class="ibrands img-fluid" src="image/kalpadeep.jpg" alt="">
+          </div>
+          <div class="col-md-3">
+              <img class="ibrands img-fluid" src="image/sikkimtrip.jpg" alt="">
+          </div>
+          <div class="col-md-3">
+              <img class="ibrands img-fluid" src="image/vovotrip.jpg" alt="">
+          </div>
+          <div class="col-md-3">
+              <img class="ibrands img-fluid" src="image/bhutan-packages.jpg" alt="">
+          </div>
+      </div>
+  </div>
+  
     <!-- our brands ends -->
     
     <!-- footer starts -->
